--- a/band_website/public/index.html
+++ b/band_website/public/index.html
@@ -15,7 +15,7 @@
     -->
 
     <!--Import Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Jim+Nightshade|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jim+Nightshade|Raleway|Anton" rel="stylesheet">
 
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
