--- a/band_website/public/index.html
+++ b/band_website/public/index.html
@@ -30,6 +30,7 @@
     <div id="root"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="public/parallaxInit.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <!--
       This HTML file is a template.
