incorporated materialize scrollspy effect to auto scroll when a topbar item is clicked

--- a/band_website/public/index.html
+++ b/band_website/public/index.html
@@ -30,12 +30,18 @@
     <div id="root"></div>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('.parallax').parallax();
       });
     </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.scrollspy').scrollSpy();
+      });
+    </script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
