--- a/band_website/public/index.html
+++ b/band_website/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/> <!--Let browser know website is optimized for mobile-->
@@ -25,6 +25,11 @@
       $(document).ready(function(){
         $('.scrollspy').scrollSpy();
       });
+    </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.carousel').carousel();
+      });              
     </script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 
