adds slider to photo section, with stock images.  Centers the slider by adding an empty col s1 div to either side

--- a/band_website/public/index.html
+++ b/band_website/public/index.html
@@ -22,14 +22,19 @@
         $('.parallax').parallax();
       });
     </script>
-    
+
     <script type="text/javascript">
       $(document).ready(function(){
         $('.scrollspy').scrollSpy();
       });
     </script>
 
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.slider').slider();
+      });
+    </script>
 
+    <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
